--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="cam">Escanear</string>
+
+    
+    //Menu
+    <string name="qr">Scan Cam</string>
+    <string name="barcode">Escanear</string>
+    <string name="other">Scan Cam</string>
 </resources>
