--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
+    //SISTEMA
     <string name="app_name">Scan Cam</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    //ShorCut
     <string name="cam">Escanear</string>
 
 
