Se configuro terminos y politicas y se creo el menu de retroceso

--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="NoScan">No se ha escaneado ningún código</string>
     <string name="NoScan_1">No se ha escaneado ningún enlace</string>
     <string name="Scan">Escanear</string>
+    <string name="mb">Atras</string>
 
     //Menu
     <string name="qr">Códigos QR</string>
