Se completo la primer fase de prueba

--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="CopyScan">Texto copiado al portapapeles</string>
     <string name="linkPoliticas">https://stuarddevapps.web.app/politicas-de-privacidad.html</string>
     <string name="linkTerminos">https://stuarddevapps.web.app/terminos-y-condiciones.html</string>
+    <string name="Escaneo_Complete">Completo</string>
 
 
     //Menu
