--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="linkPoliticas">https://stuarddevapps.web.app/politicas-de-privacidad.html</string>
     <string name="linkTerminos">https://stuarddevapps.web.app/terminos-y-condiciones.html</string>
     <string name="Escaneo_Complete">Completo</string>
+    <string name="copy">Copiar</string>
+    <string name="NNN">NNN</string>
 
 
     //Menu
