--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="secure">El enlace parece ser Seguro</string>
     <string name="nosecure">El enlace parece ser inseguro</string>
 
+    //ADS
+    <string name="intersictial">ca-app-pub-6691938542138083/3493162843</string>
+
 
     //Menu
     <string name="qr">Códigos QR</string>
