--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -27,7 +27,9 @@
     <string name="nosecure">El enlace parece ser inseguro</string>
 
     //ADS
-    <string name="intersictial">ca-app-pub-6691938542138083/3493162843</string>
+    <string name="intersictial_qr">ca-app-pub-6691938542138083/3493162843</string>
+    <string name="intersictial_bar">ca-app-pub-6691938542138083/8458549062</string>
+    <string name="intersictial_other">ca-app-pub-6691938542138083/3206222383</string>
 
 
     //Menu
