Se corrigio algunos textos sin string.xml

--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="NNN"></string>
     <string name="secure">El enlace parece ser Seguro</string>
     <string name="nosecure">El enlace parece ser inseguro</string>
+    <string name="frag_qr">Códigos QR</string>
+    <string name="frag_bar">Código de Barra</string>
+    <string name="frag_o">Otros Códigos</string>
 
     //ADS
     <string name="intersictial_qr">ca-app-pub-6691938542138083/3493162843</string>
