--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="frag_qr">Códigos QR</string>
     <string name="frag_bar">Código de Barra</string>
     <string name="frag_o">Otros Códigos</string>
+    <string name="info">¿Qué significa esto?</string>
 
     //ADS
     <string name="intersictial_qr">ca-app-pub-6691938542138083/3493162843</string>
