--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -30,6 +30,10 @@
     <string name="frag_o">Otros Códigos</string>
     <string name="info">¿Qué significa esto?</string>
 
+    //Share
+    <string name="msg">Hey,descarga esta increíble aplicación.\n¡Descargala y dale 5 estrellas!\n</string>
+    <string name="appurl">https://play.google.com/store/apps/details?id=com.stuarddevapps.scancam</string>
+
     //ADS
     <string name="intersictial_qr">ca-app-pub-6691938542138083/3493162843</string>
     <string name="intersictial_bar">ca-app-pub-6691938542138083/8458549062</string>
