--- a/ScanCam/app/src/main/res/values-es/strings.xml
+++ b/ScanCam/app/src/main/res/values-es/strings.xml
@@ -14,23 +14,22 @@
     <string name="Terminos">Términos y Condiciones</string>
     <string name="Politica">Pólitica de Privacidad</string>
     <string name="compartir">Share</string>
-    <string name="ScanQR">ESCANEAR CÓDIGO QR</string>
+    <string name="ScanQR">ESCANEA LO QUE NECESITES</string>
     <string name="ScanBarcode">ESCANEAR CÓDIGO DE BARRAS</string>
-    <string name="ScanOther">ESCANEAR OTRO TIPO DE CÓDIGO</string>
     <string name="exitScan">Cancelaste el escaneo</string>
     <string name="CopyScan">Texto copiado al portapapeles</string>
-    <string name="linkPoliticas">https://stuarddevapps.web.app/politicas-de-privacidad.html</string>
-    <string name="linkTerminos">https://stuarddevapps.web.app/terminos-y-condiciones.html</string>
-    <string name="Escaneo_Complete">Completo</string>
+    <string name="linkPoliticas">https://estuardo.dev/legal/politicas-de-privacidad/</string>
+    <string name="linkTerminos">https://estuardo.dev/legal/terminos-y-condiciones/</string>
+    <string name="Escaneo_Complete">Escaneo Completo</string>
     <string name="copy">Copiar</string>
     <string name="NNN"></string>
     <string name="secure">El enlace parece ser Seguro</string>
     <string name="nosecure">El enlace parece ser inseguro</string>
-    <string name="frag_qr">Códigos QR</string>
+    <string name="frag_qr">Escanea Códigos<Códigos></Códigos></string>
     <string name="frag_bar">Código de Barra</string>
     <string name="frag_o">Otros Códigos</string>
     <string name="info">¿Qué significa esto?</string>
-    <string name="terminos"><a href="https://stuarddevapps.web.app/terminos-y-condiciones.html">Términos y Condiciones de Scan Cam</a></string>
+    <string name="terminos"><a href="https://estuardo.dev/legal/terminos-y-condiciones/">Términos y Condiciones de Scan Cam</a></string>
     <string name="mala">En caso contrario y el icono mostrado sea este probablemente el sitio web sea inseguro de varias manera como por ejemplo, virus, malware, datos del usuario expuestos, cookies mal intencionadas, etc.</string>
     <string name="sc">Scan Cam, no se hace responsable de los enlaces que usted como usuario visita. Todo enlace que abra fuera de la app es bajo su responsabilidad. Puedes leer mas en: </string>
     <string name="bien">En dado caso que el icono sea este, se refiere a que posiblemente el sitio sea seguro. Mas no se confirma, debido que puede estar enlazado a un acortador de enlaces como bien lo puede ser bitly</string>
@@ -47,7 +46,6 @@
 
 
     //Menu
-    <string name="qr">Códigos QR</string>
+    <string name="qr">Escanea Códigos</string>
     <string name="barcode">Códigos de Barra</string>
-    <string name="other">Otros Códigos</string>
 </resources>
