--- a/ScanCam/app/src/main/res/values-es/strings.xml
+++ b/ScanCam/app/src/main/res/values-es/strings.xml
@@ -42,7 +42,7 @@
     //ADS
     <string name="intersictial_qr">ca-app-pub-6691938542138083/3493162843</string>
     <string name="intersictial_bar">ca-app-pub-6691938542138083/8458549062</string>
-    <string name="intersictial_other">ca-app-pub-6691938542138083/3206222383</string>
+    <string name="intersictial_scan">ca-app-pub-6691938542138083/8216073078</string>
 
 
     //Menu
