Se mejoro el codigo y se agregaron funcionalidades ademas se mejoro la app

--- a/ScanCam/app/src/main/res/values-es/strings.xml
+++ b/ScanCam/app/src/main/res/values-es/strings.xml
@@ -50,4 +50,5 @@
     <string name="qr">Escanea Códigos</string>
     <string name="barcode">Códigos de Barra</string>
     <string name="history">Historial</string>
+    <string name="clear">Vaciar</string>
 </resources>
