--- a/ScanCam/app/src/main/res/values/strings.xml
+++ b/ScanCam/app/src/main/res/values/strings.xml
@@ -50,4 +50,7 @@
     <string name="barcode">Códigos de Barra</string>
     <string name="history">Historial</string>
 
+    // Menu History
+    <string name="clear">Vaciar</string>
+
 </resources>
