--- a/ScanCam/app/src/main/res/values-en/strings.xml
+++ b/ScanCam/app/src/main/res/values-en/strings.xml
@@ -50,4 +50,5 @@
     <string name="qr">Scan Code</string>
     <string name="barcode">Barcodes</string>
     <string name="history">History</string>
+    <string name="clear">Clear</string>
 </resources>
